--- a/.gitignore
+++ b/.gitignore
@@ -178,3 +178,7 @@ dmypy.json
 .pytype/
 
 # End of https://www.toptal.com/developers/gitignore/api/c++,cuda,python
+
+# Extra
+*.db
+final_config.json
