--- a/.gitignore
+++ b/.gitignore
@@ -183,6 +183,7 @@ dmypy.json
 *.db
 final_config.json
 tuning_examples/opentuner/bfs/BFS
+tuning_examples/opentuner/spmv/spmv
 tuning_examples/ktt/sort/sort
 tuning_examples/cltune/sort/sort
 results.csv
