Add CLTune Dockerfile

--- a/tuning_examples/cltune/sort/Makefile
+++ b/tuning_examples/cltune/sort/Makefile
@@ -1,6 +1,6 @@
 CC=g++
-CLTUNE_PATH=~/Desktop/auto-tuners/CLTune/include
-CLTUNE_LIBRARY=~/Desktop/auto-tuners/CLTune/build
+CLTUNE_PATH=/usr/local/CLTune/include
+CLTUNE_LIBRARY=/usr/local/CLTune/build
 
 default:
 	@$(CC) -Wall -Wextra -Werror sort.cpp -o sort -I $(CLTUNE_PATH) -L $(CLTUNE_LIBRARY) -lcltune
