Add Scan program and OpenTuner implementation

--- a/.gitignore
+++ b/.gitignore
@@ -183,6 +183,7 @@ dmypy.json
 *.db
 final_config.json
 tuning_examples/opentuner/bfs/BFS
+tuning_examples/opentuner/scan/scan
 tuning_examples/opentuner/spmv/spmv
 tuning_examples/opentuner/triad/triad
 tuning_examples/ktt/sort/sort
