Add MD5Hash program and OpenTuner implementation

--- a/.gitignore
+++ b/.gitignore
@@ -185,6 +185,7 @@ final_config.json
 tuning_examples/opentuner/bfs/BFS
 tuning_examples/opentuner/scan/scan
 tuning_examples/opentuner/spmv/spmv
+tuning_examples/opentuner/md5hash/md5hash
 tuning_examples/opentuner/triad/triad
 tuning_examples/ktt/sort/sort
 tuning_examples/cltune/sort/sort
