--- a/.gitignore
+++ b/.gitignore
@@ -189,6 +189,7 @@ tuning_examples/opentuner/md5hash/md5hash
 tuning_examples/opentuner/triad/triad
 tuning_examples/opentuner/reduction/reduction
 tuning_examples/opentuner/stencil2d/Stencil2D
+tuning_examples/opentuner/md/md
 tuning_examples/ktt/sort/sort
 tuning_examples/cltune/sort/sort
 results.csv
