--- a/.gitignore
+++ b/.gitignore
@@ -190,6 +190,7 @@ tuning_examples/opentuner/triad/triad
 tuning_examples/opentuner/reduction/reduction
 tuning_examples/opentuner/stencil2d/Stencil2D
 tuning_examples/opentuner/md/md
+tuning_examples/opentuner/sort/sort
 tuning_examples/ktt/sort/sort
 tuning_examples/cltune/sort/sort
 results.csv
