--- a/tuning_examples/ktt/sort/Makefile
+++ b/tuning_examples/ktt/sort/Makefile
@@ -1,10 +1,11 @@
 CC=g++
-KTT_PATH=/usr/local/KTT/source
-KTT_LIBRARY=/usr/local/KTT/build/x86_64_Release/
+KTT_PATH?=/usr/local/KTT
+KTT_INCLUDE?=$(KTT_PATH)/source/
+KTT_LIBRARY?=$(KTT_PATH)/build/x86_64_Release
 
 default:
 	@echo "\033[93m[i]\033[0m Compiling... 🔨"
-	@$(CC) sort.cpp -o sort -I $(KTT_PATH) -L $(KTT_LIBRARY) -lktt
+	@$(CC) sort.cpp -o sort -I $(KTT_INCLUDE) -Wl,-rpath $(KTT_LIBRARY) -L $(KTT_LIBRARY) -lktt
 	@echo "\033[92m[✓]\033[0m Done compiling program! 🎉"
 
 clean:
