--- a/.gitignore
+++ b/.gitignore
@@ -195,6 +195,7 @@ tuning_examples/ktt/sort/sort
 tuning_examples/cltune/sort/sort
 results.csv
 *results.json
+*results.csv
 temp_*
 
 # Ignore VSCode directory
