--- a/tuning_examples/cltune/sort/Makefile
+++ b/tuning_examples/cltune/sort/Makefile
@@ -5,7 +5,7 @@ CLTUNE_LIBRARY?=$(CLTUNE_PATH)/build
 
 default:
 	@echo "\033[93m[i]\033[0m Compiling... 🔨"
-	@$(CC) -Wall -Wextra -Werror sort_tuner.cpp -o sort -I $(CLTUNE_INCLUDE) -Wl,-rpath $(CLTUNE_LIBRARY)  -L $(CLTUNE_LIBRARY) -lcltune
+	@$(CC) -Wall -Wextra -Werror ../cltune_json_saver.cpp sort_tuner.cpp -o sort -I .. -I $(CLTUNE_INCLUDE) -Wl,-rpath $(CLTUNE_LIBRARY)  -L $(CLTUNE_LIBRARY) -lcltune
 	@echo "\033[92m[✓]\033[0m Done compiling program! 🎉"
 
 clean:
