--- a/tuning_examples/opentuner/stencil2d/Makefile
+++ b/tuning_examples/opentuner/stencil2d/Makefile
@@ -22,11 +22,10 @@ dependencies:
 	@ranlib $(START_PATH)/common/libSHOCCommon.a
 	@echo "\033[92m[✓]\033[0m Done compiling dependencies! 🎉"
 
-
 clean:
 	@echo "\033[93m[i]\033[0m Cleaning up... 🗑️"
 	@$(RM) *.o
-	@$(RM) ./src/common/*.o
-	@$(RM) ./src/common/libSHOCCommon.a
+	@$(RM) $(START_PATH)/common/*.o
+	@$(RM) $(START_PATH)/common/libSHOCCommon.a
 	@$(RM) ./Stencil2D
 	@echo "\033[92m[✓]\033[0m Done cleaning up! 🎉"
