--- a/tuning_examples/opentuner/triad/Makefile
+++ b/tuning_examples/opentuner/triad/Makefile
@@ -1,4 +1,3 @@
-
 CC=g++
 START_PATH=../../../src/programs
 
@@ -21,7 +20,7 @@ dependencies:
 clean:
 	@echo "\033[93m[i]\033[0m Cleaning up... 🗑️"
 	@$(RM) *.o
-	@$(RM) ./src/common/*.o
-	@$(RM) ./src/common/libSHOCCommon.a
+	@$(RM) $(START_PATH)/common/*.o
+	@$(RM) $(START_PATH)/common/libSHOCCommon.a
 	@$(RM) ./triad
 	@echo "\033[92m[✓]\033[0m Done cleaning up! 🎉"
