Add SpMV implementation for CLTune

--- a/.gitignore
+++ b/.gitignore
@@ -194,6 +194,8 @@ tuning_examples/opentuner/sort/sort
 tuning_examples/ktt/sort/sort
 tuning_examples/cltune/sort/sort
 tuning_examples/cltune/triad/triad
+tuning_examples/cltune/bfs/bfs
+tuning_examples/cltune/spmv/spmv
 results.csv
 *results.json
 *results.csv
