Update some configs with result files

--- a/tuning_examples/cltune/sort/config.json
+++ b/tuning_examples/cltune/sort/config.json
@@ -3,5 +3,10 @@
         "make clean",
         "make"
     ],
-    "run": "./sort"
+    "run": "./sort",
+    "results": [
+        "best-scan-results.json",
+        "best-radixSortBlocks-results.json",
+        "best-vectorAddUniform4-results.json"
+    ]
 }
