Update some configs with result files

--- a/tuning_examples/ktt/sort/config.json
+++ b/tuning_examples/ktt/sort/config.json
@@ -3,5 +3,8 @@
         "make clean",
         "make"
     ],
-    "run": "./sort"
+    "run": "./sort",
+    "results": [
+        "best-sort-results.json"
+    ]
 }
