--- a/tuning_examples/kernel_tuner/triad/config.json
+++ b/tuning_examples/kernel_tuner/triad/config.json
@@ -1,3 +1,6 @@
 {
-    "run": "python3 triad_tuner.py"
+    "run": "python3 triad_tuner.py",
+    "results": [
+        "triad-results.json"
+    ]
 }
