Ignore more benchmark executables

--- a/.gitignore
+++ b/.gitignore
@@ -192,10 +192,15 @@ tuning_examples/opentuner/stencil2d/Stencil2D
 tuning_examples/opentuner/md/md
 tuning_examples/opentuner/sort/sort
 tuning_examples/ktt/sort/sort
+tuning_examples/ktt/triad/triad
+tuning_examples/ktt/md/md
+tuning_examples/ktt/reduction/reduction
 tuning_examples/cltune/sort/sort
 tuning_examples/cltune/triad/triad
 tuning_examples/cltune/bfs/bfs
 tuning_examples/cltune/spmv/spmv
+tuning_examples/cltune/md/md
+tuning_examples/cltune/reduction/reduction
 results.csv
 *results.json
 *results.csv
