--- a/tuning_examples/ktt/triad/config.json
+++ b/tuning_examples/ktt/triad/config.json
@@ -5,6 +5,6 @@
     ],
     "run": "./triad",
     "results": [
-        "best-triad-results.json"
+        "best-triad_helper-results.json"
     ]
 }
