Filter out best configuration in Kernel Tuner

--- a/tuning_examples/kernel_tuner/triad/config.json
+++ b/tuning_examples/kernel_tuner/triad/config.json
@@ -1,6 +1,6 @@
 {
     "run": "python3 triad_tuner.py",
     "results": [
-        "triad-results.json"
+        "best-triad-results.json"
     ]
 }
