--- a/tuning_examples/opentuner/scan/config.json
+++ b/tuning_examples/opentuner/scan/config.json
@@ -3,5 +3,5 @@
         "make clean",
         "make dependencies"
     ],
-    "run": "python3 scan_tuner.py --no-dups --stop-after=30"
+    "run": "python3 scan_tuner.py --stop-after=30 --problem-size=1"
 }
