Save used problem size to results in CLTune

--- a/tuning_examples/cltune/bfs/config.json
+++ b/tuning_examples/cltune/bfs/config.json
@@ -3,5 +3,8 @@
         "make clean",
         "make"
     ],
-    "run": "./bfs"
+    "run": "./bfs",
+    "results": [
+        "best-BFS_kernel_warp-results.json"
+    ]
 }
