--- a/tuning_examples/cltune/spmv/config.json
+++ b/tuning_examples/cltune/spmv/config.json
@@ -3,5 +3,8 @@
         "make clean",
         "make"
     ],
-    "run": "./spmv"
+    "run": "./spmv",
+    "results": [
+        "best-spmv_kernel-results.json"
+    ]
 }
