Minor CLTune tweak

--- a/tuning_examples/cltune/md5hash/config.json
+++ b/tuning_examples/cltune/md5hash/config.json
@@ -3,5 +3,8 @@
         "make clean",
         "make"
     ],
-    "run": "./md5hash"
+    "run": "./md5hash",
+    "results": [
+        "best-FindKeyWithDigest_Kernel-results.json"
+    ]
 }
