--- a/.gitignore
+++ b/.gitignore
@@ -195,6 +195,8 @@ tuning_examples/ktt/sort/sort
 tuning_examples/ktt/triad/triad
 tuning_examples/ktt/md/md
 tuning_examples/ktt/reduction/reduction
+tuning_examples/ktt/bfs/bfs
+tuning_examples/ktt/md5hash/md5hash
 tuning_examples/cltune/sort/sort
 tuning_examples/cltune/triad/triad
 tuning_examples/cltune/bfs/bfs
