--- a/.gitignore
+++ b/.gitignore
@@ -197,6 +197,7 @@ tuning_examples/ktt/md/md
 tuning_examples/ktt/reduction/reduction
 tuning_examples/ktt/bfs/bfs
 tuning_examples/ktt/md5hash/md5hash
+tuning_examples/ktt/spmv/spmv
 tuning_examples/cltune/sort/sort
 tuning_examples/cltune/triad/triad
 tuning_examples/cltune/bfs/bfs
