--- a/tuning_examples/opentuner/scan/config.json
+++ b/tuning_examples/opentuner/scan/config.json
@@ -3,7 +3,7 @@
         "make clean",
         "make dependencies"
     ],
-    "run": "python3 scan_tuner.py --stop-after=30",
+    "run": "python3 scan_tuner.py --no-dups --stop-after=600",
     "results": [
         "results.json"
     ]
