Adds MinTuner and KTT, a re-factor to buffered DataFrames instead of lists of Results for Dataset class

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "schemas/TuningSchema"]
 	path = schemas/TuningSchema
 	url = https://github.com/odgaard/TuningSchema
+[submodule "src/tuners/KTT_runner/KTT"]
+	path = src/tuners/KTT_runner/KTT
+	url = https://github.com/HiPerCoRe/KTT
