Fix stash conflicts

--- a/experiment-settings.json
+++ b/experiment-settings.json
@@ -1,8 +1,7 @@
 {
     "BenchmarkConfig": {
         "Benchmarks": [
-            "GEMM",
-            "nbody"
+            "GEMM"
         ],
         "dataSize": 16384,
         "iterations": 10
@@ -22,7 +21,7 @@
     },
     "SearchSettings": {
         "TunerName": [
-            "mintuner"
+            "kerneltuner"
         ]
     }
 }
