--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,17 @@
-ConfigSpace==0.6.0
-cupy==11.1.0
-jsonschema==3.2.0
-kernel_tuner==0.4.3
-numpy==1.23.3
+ConfigSpace==0.6.1
+cupy==12.1.0
+jc==1.23.2
+jsonschema==4.17.3
+kernel-tuner==0.4.4
+numpy==1.23.5
 opentuner==0.8.8
-pandas==1.5.0
-pytest==7.1.3
-requests==2.26.0
+optuna==3.2.0
+pandas==2.0.2
+pytest==7.3.1
+scikit-learn==1.2.2
+scipy==1.10.1
 smac==1.4.0
 xmltodict==0.13.0
-pipreqs==0.4.11
-jc==1.22.2
+requests==2.28.2
 tables==3.8.0
-optuna==3.0.5
+pipreqs==0.4.13
