--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -28,7 +28,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pylint pytest
-        pip install .[all]
+        pip install .[tuners]
     - name: Lint with pylint
       run: |
         # stop the build if there are Python syntax errors or undefined names
